unpackaged/main/default/objects/AmazonSQS__c/AmazonSQS__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Configuration details for Amazon SQS Integration</description>
    <label>Amazon SQS</label>
</CustomObject>