unpackaged/main/default/objects/AmazonSQS__c/fields/Access_Key__c.field-meta.xml
<CustomField>
    <fullName>Access_Key__c</fullName>
    <description>Access Key for the AWS Instance</description>
    <label>Access Key</label>
    <length>100</length>
    <type>Text</type>
</CustomField>