unpackaged/main/default/objects/AmazonSQS__c/fields/Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Endpoint__c</fullName>
    <description>SQS queue endpoint</description>
    <label>Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>