unpackaged/main/default/objects/AmazonSQS__c/fields/Queue_Name__c.field-meta.xml
<CustomField>
    <fullName>Queue_Name__c</fullName>
    <description>This is the name of the SQS queue (should have the entire URL to avoid errors)</description>
    <label>Queue Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>