unpackaged/main/default/objects/AmazonSQS__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <description>Region of the SQS queue</description>
    <label>Region</label>
    <length>50</length>
    <type>Text</type>
</CustomField>