unpackaged/main/default/objects/AmazonSQS__c/fields/Secret_Key__c.field-meta.xml
<CustomField>
    <fullName>Secret_Key__c</fullName>
    <description>Secret key for the AWS instance</description>
    <label>Secret Key</label>
    <length>150</length>
    <type>Text</type>
</CustomField>